Integrate To-Do App, Chat App, and Mangal Moti projects into V2

--- a/Kadambari-AI-Portfolio-V2/index.html
+++ b/Kadambari-AI-Portfolio-V2/index.html
@@ -635,15 +635,17 @@
         <section id="projects" class="container">
             <h2>Story Mode Projects</h2>
             <div class="projects-grid">
-                <!-- Project 1 -->
+                <!-- Project A: To-Do Application -->
                 <article class="project-card">
                     <span class="status-tag status-completed">Completed</span>
-                    <h3>[Project Title A]</h3>
-                    <p class="project-desc">Problem: Solving knowledge retrieval accuracy in financial datasets.</p>
+                    <h3>To-Do Application | Full Stack</h3>
+                    <p class="project-desc">Problem: Users lack a seamless, interactive system for real-time task
+                        management and state preservation.</p>
                     <div class="project-tags">
-                        <span class="tag">Python</span>
-                        <span class="tag">OpenAI</span>
-                        <span class="tag">Pinecone</span>
+                        <span class="tag">React</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">MongoDB</span>
+                        <span class="tag">CRUD</span>
                     </div>
                     <div class="project-actions">
                         <a href="#" class="btn btn-secondary btn-mini">View Story</a>
@@ -651,15 +653,17 @@
                         <a href="#" class="btn btn-secondary btn-mini">Developer Mode</a>
                     </div>
                 </article>
-                <!-- Project 2 -->
+                <!-- Project B: Chat Application -->
                 <article class="project-card">
                     <span class="status-tag status-completed">Completed</span>
-                    <h3>[Project Title B]</h3>
-                    <p class="project-desc">Problem: Automating documentation analysis for legal compliance.</p>
+                    <h3>Chat Application | Real-Time Messaging</h3>
+                    <p class="project-desc">Problem: Difficulty in implementing low-latency, real-time bidirectional
+                        communication for interactive web experiences.</p>
                     <div class="project-tags">
-                        <span class="tag">Java</span>
-                        <span class="tag">Spring Boot</span>
-                        <span class="tag">LlamaIndex</span>
+                        <span class="tag">Socket.io</span>
+                        <span class="tag">Express</span>
+                        <span class="tag">React</span>
+                        <span class="tag">WebSockets</span>
                     </div>
                     <div class="project-actions">
                         <a href="#" class="btn btn-secondary btn-mini">View Story</a>
@@ -667,15 +671,17 @@
                         <a href="#" class="btn btn-secondary btn-mini">Developer Mode</a>
                     </div>
                 </article>
-                <!-- Project 3 -->
+                <!-- Project C: Mangal Moti Dagine -->
                 <article class="project-card">
-                    <span class="status-tag status-planned">Planned</span>
-                    <h3>[Project Title C]</h3>
-                    <p class="project-desc">Problem: Real-time agentic orchestration for supply chain logs.</p>
+                    <span class="status-tag status-planned">In-Progress</span>
+                    <h3>Mangal Moti Dagine | Jewelry Business</h3>
+                    <p class="project-desc">Problem: Local businesses struggle to reach customers digitally due to a
+                        lack of professional, high-usability web platforms.</p>
                     <div class="project-tags">
-                        <span class="tag">AI</span>
-                        <span class="tag">RAG</span>
-                        <span class="tag">LangGraph</span>
+                        <span class="tag">HTML5</span>
+                        <span class="tag">CSS3</span>
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">Business UI</span>
                     </div>
                     <div class="project-actions">
                         <a href="#" class="btn btn-secondary btn-mini">View Story</a>
