Updated Kadambari AI Portfolio V2 with real project data

--- a/Kadambari-AI-Portfolio-V2/index.html
+++ b/Kadambari-AI-Portfolio-V2/index.html
@@ -605,7 +605,7 @@
                         <span class="badge">AI Enthusiast</span>
                         <span class="badge">RAG Expert</span>
                     </div>
-                    <h1>[Full Name Placeholder]</h1>
+                    <h1>Kadambari Girish Galinde</h1>
                     <p class="tagline">Backend & AI Engineer | RAG & LLM Enthusiast</p>
                     <div class="cta-row">
                         <a href="#playground" class="btn btn-primary">Talk to Kadambari AI</a>
@@ -621,8 +621,12 @@
                 <h2>About Me</h2>
                 <!-- Replace with personal bio -->
                 <p>
-                    [Placeholder for professional bio: Describe your 3rd-year Computer Engineering journey,
-                    deep interest in backend architectures, and passion for AI/LLM integration.]
+                    Motivated B.Tech engineering student and aspiring Full Stack Developer with strong hands-on
+                    experience in backend development, REST APIs, and AI-powered applications. Actively
+                    building and showcasing real-world projects on GitHub, with a growing focus on LLMs and RAG-based
+                    systems.
+                    Passionate about writing clean, scalable code and solving practical problems using modern
+                    technologies.
                 </p>
                 <p>
                     I enjoy bridging the gap between scalable server logic and cutting-edge RAG systems.
@@ -718,7 +722,7 @@
                 <div class="timeline-item left-node">
                     <div class="timeline-content">
                         <h4>Diploma in Engineering</h4>
-                        <p style="font-size: 0.8rem;">[Date Range]</p>
+                        <p style="font-size: 0.8rem;">2021-2024</p>
                         <p>What I learned: Fundamentals of CS & IT.</p>
                         <p>Tech: C, Java, HTML/CSS.</p>
                         <a href="#" style="color: var(--accent); font-size: 0.8rem;">View Diploma Repo</a>
@@ -728,7 +732,7 @@
                 <div class="timeline-item right-node">
                     <div class="timeline-content">
                         <h4>B.Tech - Computer Engineering</h4>
-                        <p style="font-size: 0.8rem;">[Date Range]</p>
+                        <p style="font-size: 0.8rem;">2024-2027</p>
                         <p>What I learned: Advanced backend & AI integration.</p>
                         <p>Tech: Python, Node.js, ML.</p>
                     </div>
@@ -736,8 +740,8 @@
                 <!-- Node 3 -->
                 <div class="timeline-item left-node">
                     <div class="timeline-content">
-                        <h4>Hackathon [Name]</h4>
-                        <p style="font-size: 0.8rem;">[Year]</p>
+                        <h4>Hackathon Sustainovation</h4>
+                        <p style="font-size: 0.8rem;">2025</p>
                         <p>Role: Lead Developer. Built a RAG-based query engine in 48 hours.</p>
                         <p>Tech: OpenAI, Flask.</p>
                     </div>
@@ -746,7 +750,7 @@
                 <div class="timeline-item right-node">
                     <div class="timeline-content">
                         <h4>AI Labs Research</h4>
-                        <p style="font-size: 0.8rem;">[Project Name]</p>
+                        <p style="font-size: 0.8rem;">kadambariNotepad</p>
                         <p>Focus: Benchmarking chunking strategies for vector DBs.</p>
                     </div>
                 </div>
